src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__2_dim_Array.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 4208
expression: ir
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@b = unnamed_addr constant i16 6
