src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__codegen_array_of_struct_with_callstatements.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 4879
expression: ir
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%Entry = type { i16, i16 }

@entries = unnamed_addr constant [3 x %Entry] [%Entry { i16 1, i16 150 }, %Entry { i16 2, i16 100 }, %Entry { i16 3, i16 75 }]
@__Entry__init = unnamed_addr constant %Entry zeroinitializer
