src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__codegen_const_array_index_access_from_global_array.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 1974
expression: src
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@values = unnamed_addr constant [4 x i16] [i16 3, i16 5, i16 8, i16 13]
@first = unnamed_addr constant i16 3
@third = unnamed_addr constant i16 8
