src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__codegen_const_array_of_struct_field_access.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 1999
expression: src
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%Entry = type { i16, i16 }

@entries = unnamed_addr constant [2 x %Entry] [%Entry { i16 1, i16 100 }, %Entry { i16 2, i16 200 }]
@__Entry__init = unnamed_addr constant %Entry zeroinitializer
@secondId = unnamed_addr constant i16 2
@firstValue = unnamed_addr constant i16 100
