src/resolver/tests/snapshots/rusty__resolver__tests__const_resolver_new_tests__codegen_struct_with_callstatement_simple.snap
---
source: src/resolver/tests/const_resolver_new_tests.rs
assertion_line: 4828
expression: ir
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%Point = type { i16, i16 }

@p = unnamed_addr constant %Point { i16 15, i16 20 }
@__Point__init = unnamed_addr constant %Point zeroinitializer
